# organizer_bot

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
cli/: options.def
cmake/: deps.cmake  migrations.cmake
include/: app.hpp  config.hpp  consts.hpp  consumer.hpp  database.hpp  dialogs.hpp  error_policy.hpp  errors.hpp  event.hpp  event_broker.hpp  event_utils.hpp  io_event.hpp  io_event_broker.hpp  io_event_utils.hpp  json.hpp  long_poll.hpp  macro.hpp  menu.hpp  meta.hpp  optional.hpp  organizer_db.hpp  sql_utils.hpp  stop_handler.hpp  time.hpp  time_event.hpp  time_event_dispatcher.hpp  time_event_handlers.hpp  traits.hpp  types.hpp  user_context.hpp  utils.hpp
include/formatters/: aggregate.hpp  all.hpp  enum.hpp  json.hpp  serializable.hpp  ts.hpp
include/json/: reader.hpp  value.hpp  view.hpp  writer.hpp
include/sql/: binder.hpp  native_type.hpp  parser.hpp  parser_column.hpp  parser_row.hpp
include/time/: date.hpp  schedule_frequence.hpp  schedule_unit.hpp  time_of_day.hpp  ts.hpp  ts_zoned.hpp  weekday.hpp  zone.hpp
logger/tgbm_replace/: logger.hpp
migrations/: 000.sql  001.sql
src/: app.cpp  config.cpp  database.cpp  event.cpp  event_broker.cpp  io_event.cpp  io_event_broker.cpp  json.cpp  long_poll.cpp  organizer_db.cpp  sql.cpp  stop_handler.cpp  time.cpp  time_event.cpp  time_event_dispatcher.cpp  types.cpp  user_context.cpp
src/dialogs/: call_menu.cpp  main_menu.cpp  sheduler_menu.cpp  start_dialog.cpp
src/dialogs/call/: add.cpp  list.cpp  settings.cpp
src/time/: date.cpp  schedule_frequence.cpp  schedule_unit.cpp  time_of_day.cpp  ts.cpp  ts_zoned.cpp  weekday.cpp  zone.cpp
src/time_event_handlers/: handle_all_calls.cpp
